More java version stuff